2000-07-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	Debug-on-error stuff based on a patch submitted by Paul Kienzle
	<pkienzle@kienzle.powernet.co.uk> for 2.0.x.

	* error.cc (Vdebug_on_warning): New static flag variable.
	(debug_on_warning): New function.
	(symbols_of_warning): DEFVAR debug_on_warning.
	(warning): Handle debug_on_warning here.

	* input.cc (do_keyboard): New function.
	(Fkeyboard): Use it to do the real work.
	* pt-stmt.cc (curr_statement): New static variable.
	(tree_statement::eval): Save and restore it here.
	* error.cc (Vdebug_on_error): New static flag variable.
	(debug_on_error): New function.
	(symbols_of_error): DEFVAR debug_on_error.
	(pr_where, pr_where_1): New functions.
	(error): Handle debug_on_error here.

2000-07-20  Joao Cardoso  <jcardoso@inescporto.pt>

	* Makefile.in (octave): Link with $(LD_CXX) instead of $(CXX)

2000-07-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (octave_base_stream::oscanf): Advance to next
	format element before attempting to pick up any trailing stuff.

2000-07-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (next_token_is_bin_op): Don't recognize `..' as a binary op.

	* load-save.cc (get_file_format): Call read_mat5_binary_file_header 
	with third arg true instead of false, so we don't barf if the file
	is not a matlab v5 binary file.

2000-07-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (octave): Link to ../libcruft/blas-xtra/xerbla.o here.

	* octave.cc (main): Remove kluge to attempt linking our version of
	xerbla.

2000-07-07  Steven G. Johnson  <stevenj@alum.mit.edu>

	* load-save.cc (have_h5giterate_bug): New file-scope variable.
	(hdf5_read_next_data): Only increment current_item if
	have_h5giterate_bug is true.
	(read_hdf5_data): Set have_h5giterate_bug here.
	Only increment hs.current_item if have_h5giterate_bug is true.

2000-07-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* c-file-ptr-stream.cc (c_file_ptr_buf::close):
	Return -1 if file pointer is NULL.